<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF7F3F6"
    tools:context=".MainActivity_10">

    <!-- Top bar -->
    <ImageButton
        android:id="@+id/btnBack1"
        android:layout_width="63dp"
        android:layout_height="71dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back"
        android:padding="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109"
        app:srcCompat="@drawable/back" />

    <!-- Scrollable content -->
    <TextView
        android:id="@+id/petcard_text"
        android:layout_width="414dp"
        android:layout_height="65dp"
        android:layout_marginTop="72dp"
        android:gravity="center"
        android:paddingTop="8dp"
        android:text="@string/pet_card"
        android:textColor="#C2185B"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="399dp"
        android:layout_height="495dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/petcard_text">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerPadding="8dp"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Card 1: Bruno -->
            <FrameLayout
                android:id="@+id/card1"
                android:layout_width="367dp"
                android:layout_height="140dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/petcrdbg"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/bruno_img"
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:contentDescription="@string/app_name"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/bruno" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/petname1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bruno"
                            android:textColor="@color/rose_accent"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/weight_6kg"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gender_male"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/allergies_none"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>

            <!-- Card 2: Zeeba -->
            <FrameLayout
                android:id="@+id/card2"
                android:layout_width="367dp"
                android:layout_height="140dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/petcrdbg"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/zeeba_img"
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:contentDescription="@string/app_name"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/zeeba" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/pet4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/zeeba"
                            android:textColor="@color/rose_accent"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/weight_3kg"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Gender : Male"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Allergies : None"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>


            <!-- Card 1: Cheeto-->
            <FrameLayout
                android:id="@+id/card3"
                android:layout_width="367dp"
                android:layout_height="140dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/petcrdbg"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/cheeto_img"
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:contentDescription="@string/app_name"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/cheeto" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/pet5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cheeto"
                            android:textColor="@color/rose_accent"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/weight_4kg"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gender_female"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/allergies_peanuts"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>


            <!-- Card 1: ralph -->
            <FrameLayout
                android:id="@+id/card4"
                android:layout_width="367dp"
                android:layout_height="140dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/petcrdbg"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ralph_img"
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:contentDescription="@string/app_name"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/whitedog" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/pet6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ralph"
                            android:textColor="@color/rose_accent"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/weight_7kg"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Gender : Male"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/allergies_milk"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>


            <!-- Card 1: kitty -->
            <FrameLayout
                android:id="@+id/card5"
                android:layout_width="367dp"
                android:layout_height="140dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/petcrdbg"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/kitty_img"
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:contentDescription="@string/app_name"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/kitty" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/petname5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/kitty"
                            android:textColor="@color/rose_accent"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/weight_2kg"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Gender : female"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Allergies : None"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>



            <!-- Card 1: dusty -->
            <FrameLayout
                android:id="@+id/card6"
                android:layout_width="367dp"
                android:layout_height="140dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/petcrdbg"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/dusty_img"
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:contentDescription="@string/app_name"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/blackdog" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/petname7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dusty"
                            android:textColor="@color/rose_accent"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/weight_8kg"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Gender : Male"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Allergies : None"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>


            <!-- Add more pet cards here (same structure) -->

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="314dp"
        android:layout_height="53dp"
        android:text="Youer pet's most important information within reaching distance in case of emergency"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.201" />

</androidx.constraintlayout.widget.ConstraintLayout>
